# little_deploy

./: README.md  little_deploy.py  setup.cfg  setup.py
