[metadata]

name = little-deploy
author = Francesco Montesano
author_email = franz.bergesund@gmail.com
summary = Copy files from one place to an other
home-page = https://github.com/montefra/little_deploy
license = MIT License
platform = Any

classifiers = 
        Development Status :: 2 - Pre-Alpha
        Environment :: Console
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: Unix
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Topic :: Software Development :: Documentation
        Topic :: Utilities


[entry_points]

console_scripts =
        little_deploy = little_deploy:main
